--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://botname:@localhost:3306/botname?schema=public"
+DATABASE_URL="mysql://BOTNAMEHERE:@localhost:3306/BOTNAMEHERE?schema=public"
 BOT_TOKEN="DISCORD BOT TOKEN HERE"
 SHEET_URL="GOOGLE SHEET MACRO LINK HERE"
