--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,20 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# BOTNAME
+# Name of the bot, no spaces or special characters
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# DATABASE_URL
+# DB connection string, you generally shouldn't need to touch this
+# unless you're having to work around odd server requirements.
 
-DATABASE_URL="mysql://BOTNAMEHERE:@localhost:3306/BOTNAMEHERE?schema=public"
+# BOT_TOKEN
+# Discord bot token from the Discord Developer Portal
+
+# SHEET_URL
+# Google Sheet macro link, used for fetching contribution data.
+# Note that this macro is not publically available yet. Check the
+# README for more info. If you are working for BBCGuild, Hiyde
+# will give you this info.
+
+BOTNAME="bbcguild"
+DATABASE_URL="mysql://${BOTNAME}:@localhost:3306/${BOTNAME}?schema=public"
 BOT_TOKEN="DISCORD BOT TOKEN HERE"
 SHEET_URL="GOOGLE SHEET MACRO LINK HERE"
