--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for bbcguild-test on 2025-05-19T21:31:47Z
+# fly.toml app configuration file generated for bbcguild-test on 2025-06-08T02:00:06-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -10,6 +10,6 @@ primary_region = 'iad'
   dockerfile = 'Dockerfile'
 
 [[vm]]
-  memory = '1gb'
+  memory = '512mb'
   cpu_kind = 'shared'
   cpus = 1
